--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express": "^4.17.2",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.1.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
