--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.2",
+    "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
