--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shopping-cart",
   "main": "app.js",
   "scripts": {
-    "start": "node -r esm",
+    "start": "node -r esm app.js",
     "dev": "nodemon -r esm",
     "lint": "eslint --fix src"
   },
